# nuli-avionics-flight-software

./: .gitignore  .gitmodules  CMakeLists.txt  FormatingGuide.cpp  README.md  README2.md  flagTesting.sh  platformio.ini
.github/workflows/: build-release.yml
docs/: Doxyfile  index.html
docs/html/: APRSSinTables_8h_source.html  AVX512_2Complex_8h_source.html  AVX512_2PacketMath_8h_source.html  AVX512_2TypeCasting_8h_source.html  AVX_2Complex_8h_source.html  AVX_2PacketMath_8h_source.html  AVX_2TypeCasting_8h_source.html  Accelerometer_8h_source.html  AlignedBox_8h_source.html  AltiVec_2Complex_8h_source.html  AltiVec_2PacketMath_8h_source.html  AmbiVector_8h_source.html  Amd_8h_source.html  AngleAxis_8h_source.html  AprsModulation_8h_source.html  AprsTransmitter_8h_source.html  ArduinoAvionicsHelper_8h_source.html  ArduinoFram_8h_source.html  ArduinoPyro_8h_source.html  ArduinoSerialReader_8h_source.html  ArduinoSimulationParser_8h_source.html  ArduinoSystemClock_8h_source.html  ArduinoVoltageSensor_8h_source.html  ArgumentFlag_8h_source.html  ArithmeticSequence_8h_source.html  ArrayBase_8h_source.html  ArrayCwiseBinaryOps_8h_source.html  ArrayCwiseUnaryOps_8h_source.html  ArrayWrapper_8h_source.html  Array_8h_source.html  AssignEvaluator_8h_source.html  Assign_8h_source.html  Assign__MKL_8h_source.html  AssignmentFunctors_8h_source.html  AvionicsCore_8h_source.html  Avionics_8h.html  Avionics_8h__dep__incl.dot  Avionics_8h__dep__incl.map  Avionics_8h__dep__incl.md5  Avionics_8h__incl.dot  (+8441 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_22.js  all_23.js  all_24.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_12.js  classes_13.js  classes_14.js  (+103 more)
docs/latex/: APRSSinTables_8h_source.tex  AVX512_2Complex_8h_source.tex  AVX512_2PacketMath_8h_source.tex  AVX512_2TypeCasting_8h_source.tex  AVX_2Complex_8h_source.tex  AVX_2PacketMath_8h_source.tex  AVX_2TypeCasting_8h_source.tex  Accelerometer_8h_source.tex  AlignedBox_8h_source.tex  AltiVec_2Complex_8h_source.tex  AltiVec_2PacketMath_8h_source.tex  AmbiVector_8h_source.tex  Amd_8h_source.tex  AngleAxis_8h_source.tex  AprsModulation_8h_source.tex  AprsTransmitter_8h_source.tex  ArduinoAvionicsHelper_8h_source.tex  ArduinoFram_8h_source.tex  ArduinoPyro_8h_source.tex  ArduinoSerialReader_8h_source.tex  ArduinoSimulationParser_8h_source.tex  ArduinoSystemClock_8h_source.tex  ArduinoVoltageSensor_8h_source.tex  ArgumentFlag_8h_source.tex  ArithmeticSequence_8h_source.tex  ArrayBase_8h_source.tex  ArrayCwiseBinaryOps_8h_source.tex  ArrayCwiseUnaryOps_8h_source.tex  ArrayWrapper_8h_source.tex  Array_8h_source.tex  AssignEvaluator_8h_source.tex  Assign_8h_source.tex  Assign__MKL_8h_source.tex  AssignmentFunctors_8h_source.tex  AvionicsCore_8h_source.tex  Avionics_8h.tex  Avionics_8h.tex.tmp  Avionics_8h__dep__incl.dot  Avionics_8h__dep__incl.md5  Avionics_8h__incl.dot  (+3642 more)
pages/: index.html
platformio_nuli_avionics_flight_software/: .gitmodules  EjectionTest.csv  EjectionTestRaw.csv  Launch1.xlsx  a.out  latest_firmware.uf2  log_data.csv  log_data.xlsx  offload.py  platformio.ini  test.cpp
platformio_nuli_avionics_flight_software/docs/html/: annotated.html  classClassName.html  dir_66345deb25f267ce4d389d14649ee295.html  dir_66345deb25f267ce4d389d14649ee295_dep.dot  dir_9386f8c0c06aedb1cd0e9c0d9733928b.html  dir_d4d6be99ba265d6acdfe64aec301c456.html  functions_func.html  functions_vars.html  index.html  structStructName__s.html
platformio_nuli_avionics_flight_software/docs/latex/: annotated.tex  classClassName.tex  classOtherClass.tex  index.tex
platformio_nuli_avionics_flight_software/include/: Accelerometer.h  AprsModulation.h  AprsTransmitter.h  ArduinoPyro.h  ArduinoSystemClock.h  Avionics.h  AvionicsCore.h  Barometer.h  BaseSensor.h  CLIEnums.h  CLIExample.cpp  CliRadioManager.cpp  CliRadioManager.h  CommonHardware.h  CommonStructs.h  CommunicationLink.h  Configuration.h  ConstantsUnits.h  CustomCsvParser.h  DebugStream.h  DesktopDebug.h  Detector.h  Filters.h  FlashMemory.h  GPS.h  GenericSensor.h  GenericSensors.h  Gyroscope.h  HardwareAbstraction.h  HardwareInterface.h  ICM20602Sensor.h  ICM20948Sensor.h  Logger.h  MS5607Sensor.h  MS8607Sensor.h  Magnetometer.h  OtherClasses.h  Ouput.h  Pyro.h  RFM9xRadio.h  (+8 more)
platformio_nuli_avionics_flight_software/include/cli/: ArgumentFlag.h  ArgumentFlag.tpp  BaseFlag.cpp  BaseFlag.h  BaseFlag.tpp  CLIExample.cpp  CLI_User_Guide.md  Flag.cpp  Flag.h  Flag.tpp  Parser.cpp  Parser.h  Parser.tpp  README.md  SimpleFlag.cpp  SimpleFlag.h
platformio_nuli_avionics_flight_software/include/tests/: FlagTest.cpp  ParserTest.cpp
platformio_nuli_avionics_flight_software/lib/: README
platformio_nuli_avionics_flight_software/lib/Eigen/: CMakeLists.txt
platformio_nuli_avionics_flight_software/lib/Embedded Template Library/: .piopm
platformio_nuli_avionics_flight_software/lib/Quaternion/: Quaternion.cpp  Quaternion.h  README.md
platformio_nuli_avionics_flight_software/scripts/: SendSimDataSillyGoose.py  logPlot.py  post_uf2.py  uf2families.json
platformio_nuli_avionics_flight_software/simulation/: Dtanysis.py  Offload.py  OffloadRaw.py  SendSimData.py  SendSimDataSillyGoose.py  logPlot.py  output.txt  rawOffload.txt
platformio_nuli_avionics_flight_software/simulation/data/: 2023-04-15-beanboozler-FCB.csv  20251030 Launch Checkout Sim Results #1 Full Flight.txt  output2.txt  (+5 more)
platformio_nuli_avionics_flight_software/src/: Avionics.h  ConfigurationRegistry.h  ConstantsUnits.h  CountLines.py  main.cpp
platformio_nuli_avionics_flight_software/uf2/: post_uf2.py  uf2conv.py
simulation/: 3d_plot.py  calc_var.py  output.txt
simulation/data/: Avionics Flight Data - 2023-04-15-beanboozler-output-FCB.csv  MBTA_FLIGHT_DATA.txt  MBTA_GPS_Clip.txt  MBTA_GPS_out.txt
src/: main.cpp
(+232 files in other folders)
